dev/phpunit/tests/fixtures/fail/suppress-filters.php
<?php
get_posts( [
	'suppress_filters' => true,
] );
